2010-12-07  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-push): New. Rewrite all other functions to
	take advantage of this macro.
	(epackage-status-installed-packages): New.
	(epackage-initialize-verify): New.
	(epackage--symlink-support-flag): New.
	(epackage-enable-file): New.
	(epackage-enable-package): Use `epackage-enable-file'.
	(epackage-activate-package): Use `epackage-enable-file'.

2010-12-06 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-download-sources-list): Remove argument
	`message'.
	(epackage-pkg-lint-git-branches): New.
	(epackage--layout-mapping): Update.
	(epackage-pkg-lint-dir-structure): New.
	(epackage-w32-p): New.
	(epackage-with-w32): New.
	(epackage-file-name-nondirectory): New.
	(epackage-directory-p): New.
	(epackage-pkg-lint-main): New.
	(epackage-git-command-branch-list): Add `arg' parameter.
	(epackage-git-command-tag-list): Fix docstring.

2010-12-05 Sun  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (defgroup Epackage): New.
	(epackage-sources-list-info-parse-line): Fix `format'.
	(epackage-download-sources-list): define variable `dir'.
	(epackage-with-debug): New.
	(epackage-with-message): New.

	* doc/index.css: New.

	* doc/Makefile: New.

	* Makefile: New.

2010-12-04  Jari Aalto  <jari.aalto@cante.net>

	* AUTHORS, COPYING, INSTALL, README: New.

	* epackage.el:
	(top-level): Rename package. Add "Compat" levels and explaint it.
	Add acronym DELPS = Distributed Emacs Lisp Package System. Add
	###autoload stanzas.
	(ti::macrof-minor-mode-wizard): comment out unused code.
	(epackage-git-command-fetch): New.
	(epackage-git-directory-p): New.
	(epackage-sources-list-info-description): New.
	(epackage--sources-list-url): No leading whitespaces before
	PACKAGE-NAME.
	(epackage-sources-list-info-parse-line): New.
	(epackage-sources-list-info-pkg-list): New.
	(epackage-string-p): New.
	(epackage-package-downloaded-p): Use `epackage-stringp-p'.