@@ -1,4 +1,4 @@
-2010-12-07  Jari Aalto  <jari.aalto@cante.net>
+2010-12-07 Tue  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-push): New. Rewrite all other functions to
 	take advantage of this macro.
@@ -8,6 +8,14 @@
 	(epackage-enable-file): New.
 	(epackage-enable-package): Use `epackage-enable-file'.
 	(epackage-activate-package): Use `epackage-enable-file'.
+	(epackage-manager): New.
+	(epackage-version): devel New.
+	(epackage-documentation): New.
+	(epackage--doc-buffer): New.
+	(epackage--finder-commentary-buffer): New.
+	(epackage-documentation-header-string): New.
+	(epackage-documentation): New.
+	(epackage-version): New.
 
 2010-12-06 Mon  Jari Aalto  <jari.aalto@cante.net>
 
